Update 1.2.3 Update dependencies Apply URL option to H2 to fix errors